--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookstore",
   "private": true,
   "version": "0.0.0",
-  "proxy":"http://localhost:3000",
+  "proxy": "http://localhost:3000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,11 +18,13 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/x-data-grid": "^6.18.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "yup": "^1.3.2"
   },
