--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^6.18.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "checkout": "^1.0.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
